JDK8 port continuing  - stub implementations of all java.lang.module.* classes  - fully implemented module classes using reflection  - automatically locates `rt.jar` on pre-module implementations  - updated *-jdk8.md test files to reflect actual behaviour
Next up:
 - fix test REGRESSIONS.md:135 `-p build/libs -m juggle.testLib /someFunction/`
     + Should fail with "modules not supported" on JDK8
     + Should work when run on JDK17
     + Might require conditional compilation of module-info.java
     + There are many other tests that fail due to use of `-m`
 - better error message if rt.jar can't be found
 - find better tests (many tests run on JDK8 are very verbose)