@@ -19,7 +19,8 @@ package com.angellane.juggle.query;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.OptionalInt;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -28,7 +29,7 @@ public class TestQuery {
     @Test
     public void testTotalValid() {
         assertEquals(OptionalInt.of(10),
-                Query.totalScore(List.of(
+                Query.totalScore(Arrays.asList(
                         OptionalInt.of(0),
                         OptionalInt.of(1),
                         OptionalInt.of(2),
@@ -40,7 +41,7 @@ public class TestQuery {
     @Test
     public void testTotalInvalid() {
         assertEquals(OptionalInt.empty(),
-                Query.totalScore(List.of(
+                Query.totalScore(Arrays.asList(
                         OptionalInt.of(0),
                         OptionalInt.of(1),
                         OptionalInt.empty(),
@@ -52,13 +53,13 @@ public class TestQuery {
 
     @Test
     public void testTotalEmpty() {
-        assertEquals(OptionalInt.of(0), Query.totalScore(List.of()));
+        assertEquals(OptionalInt.of(0), Query.totalScore(Collections.emptyList()));
     }
 
     @Test
     public void testTotalSingletonEmpty() {
         assertEquals(OptionalInt.empty(),
-                Query.totalScore(List.of(
+                Query.totalScore(Collections.singletonList(
                         OptionalInt.empty()
                 )));
     }
@@ -66,7 +67,7 @@ public class TestQuery {
     @Test
     public void testTotalSingletonValid() {
         assertEquals(OptionalInt.of(42),
-                Query.totalScore(List.of(
+                Query.totalScore(Collections.singletonList(
                         OptionalInt.of(42)
                 )));
     }
